// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deals > \`create\` > should invoke \`call\` 1`] = `
[
  [
    "crm.deal.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Deals > \`create\` > should work without optional params 1`] = `
[
  [
    "crm.deal.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": undefined,
    },
  ],
]
`;

exports[`Deals > \`get\` > should invoke \`call\` 1`] = `
[
  [
    "crm.deal.get",
    {
      "id": "77",
    },
  ],
]
`;

exports[`Deals > \`list\` > should invoke \`list\` 1`] = `
[
  [
    "crm.deal.list",
    {
      "filter": {
        ">PROBABILITY": 50,
      },
      "order": {
        "COMMENTS": "ASC",
      },
      "select": [
        "*",
        "UF_*",
      ],
      "start": 0,
    },
  ],
]
`;

exports[`Deals > \`list\` > should work without optional params 1`] = `
[
  [
    "crm.deal.list",
    {},
  ],
]
`;

exports[`Deals > \`update\` > should invoke \`call\` 1`] = `
[
  [
    "crm.deal.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Deals > \`update\` > should work without optional params 1`] = `
[
  [
    "crm.deal.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": undefined,
    },
  ],
]
`;

exports[`Deals > should expose API methods 1`] = `
{
  "create": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
